--- a/k8s/frontend-hpa.yaml
+++ b/k8s/frontend-hpa.yaml
@@ -2,6 +2,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: frontend-hpa
+  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
