Update HPA configuration

--- a/k8s/frontend-hpa.yaml
+++ b/k8s/frontend-hpa.yaml
@@ -14,4 +14,4 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 50" > k8s/frontend-hpa.yaml
+      targetAverageUtilization: 50
