--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -1,7 +1,10 @@
+
+
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2"
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "hardhat": "^2.9.9"
   },
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
