--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,12 @@
-FROM node:14 as build
+FROM node:16 as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN npx browserslist@latest --update-db
 RUN npm run build
 
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/out /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
