--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@material-tailwind/react": "^1.2.3",
     "ethers": "^5.7.0",
-    "ipfs-http-client": "^57.0.3",
+    "ipfs-http-client": "^56.0.1",
+    "@multiformats/multiaddr": "^10.5.0",
+    "ipfs-core-utils": "^0.15.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,5 +26,8 @@
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
