--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: crowdfunding-frontend
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 80
     targetPort: 80
