--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -16,4 +16,11 @@ spec:
       - name: crowdfunding-frontend
         image: localhost:5000/crowdfunding-frontend:${BUILD_NUMBER}
         ports:
-        - containerPort: 80
+        - containerPort: 3000
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 500m
+            memory: 512Mi
